--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <div id="menu" class="display-grid hide">
       <h1>Tic Tac Toe</h1>
       <div class="controls">
-        <button id="three-grid" class="clickable">3 X 3 Grid</button>
-        <button id="five-grid" class="clickable">5 X 5 Grid</button>
+        <button id="three-grid" class="clickable btn">3 X 3 Grid</button>
+        <button id="five-grid" class="clickable btn">5 X 5 Grid</button>
+        <button id="seven-grid" class="clickable btn">7 X 7 Grid</button>
       </div>
     </div>
     <div class="game">
@@ -26,6 +27,7 @@
           <div class="name">Player O</div>
         </div>
       </div>
+      <div id="result"></div>
       <div id="board" class="display-grid"></div>
       <div class="state-buttons">
         <button class="restart-btn btn clickable">Restart</button>
