Allow player input
Players can set names, first player and board size

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="menu" class="display-grid hide">
+    <div id="menu" class="display-grid">
       <h1>Tic Tac Toe</h1>
       <div class="controls">
         <button id="three-grid" class="clickable btn" data-grid="3">
